--- a/estilos/style.css
+++ b/estilos/style.css
@@ -65,10 +65,22 @@ body {
     box-shadow: 0px 10px 40px #00000056;
 }
 
-.textfilder > input {
-    color: white;
+.card-login > h1 {
+    color: var(--cor8);
+    font-weight: 800;
+    text-align: center;
 }
 
-.bnt-login {
-    
+.textfield {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.textfield > input {
+    width: 100%;
+    border: none;
+    border-radius: 10px;
+    height: 20px;
 }
